인터렉션추가구현

--- a/detail.html
+++ b/detail.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/detail.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/datepicker.min.css">
 
     <style>
         #myChart-license-text { display:none;}
@@ -554,7 +555,10 @@
                         </ul>
                     </div>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <div id="dataA"></div>
+
+                    <div class="datapicker">
+                        <img src="./images/datepicker.png" alt="">
+                    </div>
                     <button class="submitBtn">등록</button>
                 </div>
             </div>
@@ -590,7 +594,7 @@
                                 <dd>2018년 4월 10일 오후 2시 41분</dd>
                             </dl>
                             <p>새 단장 한 스토리 텔링에서 놀라 울 정도로 화려한 세계와 엄청나게 만족스러운 전투에 이르기까지 God of War는 AAA 게임의 세계에서 성취 할 수있는 새로운 기준을 제시하는 걸작품입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">0</span>
                             </div>
@@ -602,7 +606,7 @@
                                 <dd>2018년 4월 9일 오후 3시 14분</dd>
                             </dl>
                             <p>God of War는 혁신적인 게임 플레이, 화려한 비주얼 및 흥미 진진한 내러티브의 완벽한 트리 페타입니다. 그것은 개막 순간부터 나를 붙잡고 거의 30 시간 동안 숨을 멈추게하는 게임입니다 ... 이것은 내가 본 것 중 가장 매력적인 경험 중 하나입니다. 이전의 God of War 엔트리와는 달리, 이것은 앞으로 수년 동안 내가 생각할 하나의 게임입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">0</span>
                             </div>
@@ -614,7 +618,7 @@
                                 <dd>2018년 4월 8일 오전 1시 53분</dd>
                             </dl>
                             <p>새 단장 한 스토리 텔링에서 놀라 울 정도로 화려한 세계와 엄청나게 만족스러운 전투에 이르기까지 God of War는 AAA 게임의 세계에서 성취 할 수있는 새로운 기준을 제시하는 걸작품입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -626,7 +630,7 @@
                                 <dd>2018년 4월 7일 오후 10시 41분</dd>
                             </dl>
                             <p>God of War는 혁신적인 게임 플레이, 화려한 비주얼 및 흥미 진진한 내러티브의 완벽한 트리 페타입니다. 그것은 개막 순간부터 나를 붙잡고 거의 30 시간 동안 숨을 멈추게하는 게임입니다 ... 이것은 내가 본 것 중 가장 매력적인 경험 중 하나입니다. 이전의 God of War 엔트리와는 달리, 이것은 앞으로 수년 동안 내가 생각할 하나의 게임입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -638,7 +642,7 @@
                                 <dd>2018년 4월 6일 오전 11시 9분</dd>
                             </dl>
                             <p>새 단장 한 스토리 텔링에서 놀라 울 정도로 화려한 세계와 엄청나게 만족스러운 전투에 이르기까지 God of War는 AAA 게임의 세계에서 성취 할 수있는 새로운 기준을 제시하는 걸작품입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -676,7 +680,7 @@
                                 <dd>2018년 4월 10일 오후 2시 41분</dd>
                             </dl>
                             <p>새 단장 한 스토리 텔링에서 놀라 울 정도로 화려한 세계</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">0</span>
                             </div>
@@ -689,11 +693,13 @@
                             </dl>
                             <p>God of War는 혁신적인 게임 플레이, 화려한 비주얼 및 흥미 진진한 내러티브의 완벽한 트리 페타입니다.</p>
                             <ul class="commentPhoto clearfix">
-                                <li><img src="./images/comment_img.png" alt="사진"></li>
-                                <li><img src="./images/comment_img.png" alt="사진"></li>
-                                <li><img src="./images/comment_img.png" alt="사진"></li>
+                                <li href="./images/visual_img_01.png"><img src="./images/comment_img.png" alt="사진"></li>
+                                <li href="./images/visual_img_01.png"><img src="./images/comment_img.png" alt="사진"></li>
+                                <li href="./images/visual_img_01.png"><img src="./images/comment_img.png" alt="사진"></li>
                             </ul>
-                            <div class="likeBtnBox">
+
+                            
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">0</span>
                             </div>
@@ -707,7 +713,7 @@
                             <p>
                                 God of War는 AAA 게임의 세계에서 성취 할 수있는 새로운 기준을 제시하는 걸작품입니다. <span>- 2017년 5월 6일에 플레이함</span>
                             </p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -719,7 +725,7 @@
                                 <dd>2018년 4월 7일 오후 10시 41분</dd>
                             </dl>
                             <p>이것은 내가 본 것 중 가장 매력적인 경험 중 하나입니다. 이전의 God of War 엔트리와는 달리, 이것은 앞으로 수년 동안 내가 생각할 하나</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -731,7 +737,7 @@
                                 <dd>2018년 4월 6일 오전 11시 9분</dd>
                             </dl>
                             <p>새 단장 한 스토리 텔링에서 놀라 울 정도로 화려한 세계와 엄청나게 만족스러운 전투에 이르기까지 God of War는 AAA 게임의 세계에서 성취 할 수있는 새로운 기준을 제시하는 걸작품입니다.</p>
-                            <div class="likeBtnBox">
+                            <div class="likeBtnBox likeEv">
                                 <img src="./images/likeBtn.png" alt="">
                                 <span class="likeCount">1273</span>
                             </div>
@@ -766,7 +772,9 @@
                         <li>
                             <div class="regardImg">
                                 <img src="images/regardImg.png" alt="">
-                                <img class="playBtn" src="images/playBtn.png" alt="">
+                                <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="playBtn  popup-youtube">
+                                    <img class="" src="images/playBtn.png" alt="">
+                                </a>
                             </div>
                             <div class="regardMovieText">
                                 <h3><a href="#">아름답고 일월과 그들의 풍부하게 과 그들의 풍부하게 말이다<span>유튜브 • 여행에미치다 • 2016년 5월 21일</span></a></h3>
@@ -835,7 +843,8 @@
     <script src="./js/common.js"></script>
     <script src="./js/jquery.magnific-popup.js"></script> <!-- 팝업 -->
     <script src="./js/swiper.min.js"></script> <!-- 스와이프 -->
-    <script src="http://cdn.webix.com/edge/webix.js" type="text/javascript"></script> 
+    <script src="./js/datepicker.min.js"></script> <!-- 데이트피커 -->
+    
 
     <script>
     function initMap() {
@@ -849,18 +858,7 @@
         map: map
         });
     }
-    var form1 = {
-    view:"form", scroll:false, width:20, elements:[
-    ]
-    };
-    webix.ready(function(){
-        webix.ui({
-            view: "datepicker", 
-            timepicker: true,
-            width:35,
-            container: "dataA"
-        });
-    });
+
     </script>
 
     <script async defer 
