--- a/detail.html
+++ b/detail.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="http://cdn.webix.com/edge/webix.css" type="text/css">
     <link rel="stylesheet" href="./css/detail.css">
 
+    <style>
+        #myChart-license-text { display:none;}
+    </style>
 </head>
 <body>
     <!-- 헤더 -->
@@ -227,7 +230,7 @@
                     <!-- 차트&SNS -->
                     <div class="chartBox whiteBg clearfix">
                         <div id='myChart' class="snsChart">
-                            <a class="zc-ref" href="https://www.zingchart.com/">Powered by ZingChart</a>
+                            <a class="zc-ref" href="https://www.zingchart.com/"></a>
                         </div>
                         <ul class="snsValueBox">
                             <li>
