인터렉션/수정사항 추가

--- a/detail.html
+++ b/detail.html
@@ -200,11 +200,51 @@
                     </div>
                     <div class="ratingBox">
                         <ul>
-                            <li><img src="./images/rating_star.png" alt="별점"></li>
-                            <li><img src="./images/rating_hover.png" alt="별점"></li>
-                            <li><img src="./images/rating_hover.png" alt="별점"></li>
-                            <li><img src="./images/rating_normal.png" alt="별점"></li>
-                            <li><img src="./images/rating_normal.png" alt="별점"></li>
+                            <li>
+                                <img src="./images/rating_normal.png" alt="별점">
+                                <div class="starBox">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal.png" alt="별점">
+                                <div class="starBox">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal.png" alt="별점">
+                                <div class="starBox">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal.png" alt="별점">
+                                <div class="starBox">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal.png" alt="별점">
+                                <div class="starBox">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -545,13 +585,53 @@
             <div class="commentBox">
                 <p class="boxTitle">평가 남기기</p>
                 <div class="commentBoxWrap">
-                    <div class="ratingBox">
-                        <ul class="clearfix">
-                            <li><img src="./images/rating_star.png" alt="별점"></li>
-                            <li><img src="./images/rating_hover.png" alt="별점"></li>
-                            <li><img src="./images/rating_hover.png" alt="별점"></li>
-                            <li><img src="./images/rating_normal2.png" alt="별점"></li>
-                            <li><img src="./images/rating_normal2.png" alt="별점"></li>
+                    <div class="ratingBox2">
+                        <ul>
+                            <li>
+                                <img src="./images/rating_normal2.png" alt="별점">
+                                <div class="starBox2">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal2.png" alt="별점">
+                                <div class="starBox2">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal2.png" alt="별점">
+                                <div class="starBox2">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal2.png" alt="별점">
+                                <div class="starBox2">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./images/rating_normal2.png" alt="별점">
+                                <div class="starBox2">
+                                    <ul>
+                                        <li><img src="./images/rating_star.png" alt=""></li>
+                                        <li><img src="./images/rating_star_normal.png" alt=""></li>
+                                    </ul>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
@@ -567,7 +647,13 @@
             <!-- 평가보기 -->
             <div class="commentView">
                 <div class="proComment">
-                    <p class="boxTitle">전문가 평가</p>
+                    <div class="boxTitle">
+                        전문가 평가
+                        <ul>
+                            <li>전문가</li>
+                            <li>일반인</li>
+                        </ul>
+                    </div>
                     <div class="evaluationBox">
                         <span class="likeImg yellowBg">
                             <img src="./images/likeBtn_white.png" alt="">
@@ -653,7 +739,13 @@
                     </div> 
                 </div>
                 <div class="normalComment">
-                    <p class="boxTitle">일반인 평가</p>
+                    <div class="boxTitle">
+                        일반인 평가
+                        <ul>
+                            <li>전문가</li>
+                            <li>일반인</li>
+                        </ul>
+                    </div>
                     <div class="evaluationBox">
                         <span class="likeImg greenBg">
                             <img src="./images/likeBtn_white.png" alt="">
@@ -778,7 +870,7 @@
                             </div>
                             <div class="regardMovieText">
                                 <h3><a href="#">아름답고 일월과 그들의 풍부하게 과 그들의 풍부하게 말이다<span>유튜브 • 여행에미치다 • 2016년 5월 21일</span></a></h3>
-                                <p><a href="#">본 영상은 메타크리틱의 메타스코어를 기준으로 제작되었습니다. 구독과 좋아요! 눌러주시면 감사하겠습니다 템플릿 RavenProDesign</a></p>
+                                <p><a href="#">속잎나고, 그러므로 동산에는 같은 스며들어 기쁘며, 끓는다. 열락의 사는가 청춘은 황금시대다. 얼음과 열매를 몸이 이것은 구하지 것이다. 청춘 아름답고 튼튼하며, 과실이 온갖 위하여 따뜻한 하였으며, 봄바람이다. 그것을 투명하되 주며, 이상을 착목한는 같은 그들의 때문이다. 같으며, 거친 이상의 것이다.보라, 눈이 싸인 것이다. </a></p>
                             </div>
                         </li>
                         <li>
@@ -788,7 +880,7 @@
                             </div>
                             <div class="regardMovieText">
                                 <h3><a href="#">역대급 여행지 평가! '니죠 C.C.'는 어떤 곳?!<span>비메오 • 포프TV • 2016년 4월 18일</span></a></h3>
-                                <p><a href="#">안녕하세요. 메타스코어 참...많이는 들어봤는데 뭐하는놈인지... 간단하게 알아보세요! 메타스코어 홈페이지 http://www.metacritic.com 메타스코어 참...많이는 들어봤는데 뭐하는놈인지... 간단하게 알아보세요! 메타스코어 홈페이지</a></p>
+                                <p><a href="#">속잎나고, 그러므로 동산에는 같은 스며들어 기쁘며, 끓는다. 열락의 사는가 청춘은 황금시대다. 얼음과 열매를 몸이 이것은 구하지 것이다. 청춘 아름답고 튼튼하며, 과실이 온갖 위하여 따뜻한 하였으며, 봄바람이다. 그것을 투명하되 주며, 이상을 착목한는 같은 그들의 때문이다. 같으며, 거친 이상의 것이다.보라, 눈이 싸인 것이다. </a></p>
                             </div>
                         </li>
                     </ul>
