--- a/list.html
+++ b/list.html
@@ -302,6 +302,83 @@
                 </li>                
             </ul>
 
+            <ul class="mbSerchList">
+                <li>
+                    <div class="imgBox">
+                        <img src="./images/list/mbimg.png" alt="">
+                    </div>
+                    <div class="infoBox">
+                        <div>
+                            <dl class="filedInfo">
+                                <dt>나리타 G.C</dt>
+                                <dd>일본>시즈오카</dd>
+                            </dl>
+                            <div class="pointBox">88</div>
+                        </div>
+                        <div>
+                            <ul class="memList clearfix">
+                                <li><img src="./images/list/m_list_member_01.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_02.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_03.png" alt=""></li>
+                            </ul>
+                            <div class="mbmText">
+                                <p><strong>26명</strong>의 사람이</p>
+                                <p>이 장소를 평가했습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="imgBox">
+                        <img src="./images/list/mbimg.png" alt="">
+                    </div>
+                    <div class="infoBox">
+                        <div>
+                            <dl class="filedInfo">
+                                <dt>나리타 G.C</dt>
+                                <dd>일본>시즈오카</dd>
+                            </dl>
+                            <div class="pointBox">88</div>
+                        </div>
+                        <div>
+                            <ul class="memList clearfix">
+                                <li><img src="./images/list/m_list_member_01.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_02.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_03.png" alt=""></li>
+                            </ul>
+                            <div class="mbmText">
+                                <p><strong>26명</strong>의 사람이</p>
+                                <p>이 장소를 평가했습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="imgBox">
+                        <img src="./images/list/mbimg.png" alt="">
+                    </div>
+                    <div class="infoBox">
+                        <div>
+                            <dl class="filedInfo">
+                                <dt>나리타 G.C</dt>
+                                <dd>일본>시즈오카</dd>
+                            </dl>
+                            <div class="pointBox">88</div>
+                        </div>
+                        <div>
+                            <ul class="memList clearfix">
+                                <li><img src="./images/list/m_list_member_01.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_02.png" alt=""></li>
+                                <li><img src="./images/list/m_list_member_03.png" alt=""></li>
+                            </ul>
+                            <div class="mbmText">
+                                <p><strong>26명</strong>의 사람이</p>
+                                <p>이 장소를 평가했습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
 
             <!-- 페이져 -->
             <div class="pager">
@@ -317,6 +394,19 @@
                     <li>8 <span></span></li>
                     <li>9 <span></span></li>
                     <li>10 <span></span></li>
+                    <li class="nextBtn"><img src="images/nextBtn.png" alt="다음"></li>
+                </ul>
+            </div>
+
+             <!-- 페이져 -->
+             <div class="pager mobile">
+                <ul>
+                    <li class="prevBtn"><img src="images/prevBtn.png" alt="이전"></li>
+                    <li>1 <span></span></li>
+                    <li class="on">2 <span></span></li>
+                    <li>3 <span></span></li>
+                    <li>4 <span></span></li>
+                    <li>5 <span></span></li>
                     <li class="nextBtn"><img src="images/nextBtn.png" alt="다음"></li>
                 </ul>
             </div>
